--- a/дз08.html
+++ b/дз08.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style08.css" />
+    <title>Rio Coffee</title>
+  </head>
+  <body>
+    <header class="function">
+      <div class="name">Rio Coffee</div>
+      <div class="home">Home</div>
+      <div class="about">About</div>
+      <div class="survise">Survise</div>
+      <div class="menu">Menu</div>
+      <div class="contacts">
+        <a class="btn-contacts" href="#">Contact</a>
+      </div>
+    </header>
+    <main>
+        
+    </main>
+  </body>
 </html>
