--- a/дз08.html
+++ b/дз08.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Margarine&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style08.css" />
@@ -16,16 +16,20 @@
   <body>
     <header class="function">
       <div class="name">Rio Coffee</div>
-      <div class="home">Home</div>
-      <div class="about">About</div>
-      <div class="survise">Survise</div>
-      <div class="menu">Menu</div>
+      <div class="options">
+        <div class="home">Home</div>
+        <div class="about">About</div>
+        <div class="survise">Survise</div>
+        <div class="menu">Menu</div>
+      </div>
       <div class="contacts">
         <a class="btn-contacts" href="#">Contact</a>
       </div>
     </header>
     <main>
-        
+      <div class="cards easy-flexbox">easy flexbox</div>
+      <div class="cards responsive">responsive</div>
+      <div class="cards navigation-bar">navigation bar</div>
     </main>
   </body>
 </html>
